# django-exiffield

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTORS.md  MANIFEST.in  Pipfile  README.md  README.rst  conftest.py  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
exiffield/: exceptions.py  fields.py  getters.py
tests/: conftest.py  models.py  test_checks.py  test_field.py  test_getters.py
