[tool.poetry]
name = "django-exiffield"
version = "1.1.0"
description = "django-exiffield extracts exif information by utilizing exiftool."
authors = [
  "Alexander Frenzel <alex@relatedworks.com>"
]
readme = "README.rst"
license = "BSD-3-Clause"

homepage = "https://github.com/escaped/django-exiffield"
repository = "https://github.com/escaped/django-exiffield"
documentation = "https://github.com/escaped/django-exiffield/blob/master/README.rst"

keywords = ["django", "exif"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
  { include = "exiffield" },
]

[tool.poetry.dependencies]
python = ">=3.6"

choicesenum = ">=0.2.2"
django = ">=1.11"
django-jsonfield = "^1.0"
pillow = "^5.0"

[tool.poetry.dev-dependencies]
flake8-isort = "^2.5"
flake8-mypy = "^17.8"
ipython = "^6.4"
pdbpp = "^0.9.2"
pytest = "^3.6"
pytest-cov = "^2.5"
pytest-django = "3.3.2"
pytest-flake8 = "^1.0"
pytest-mock = "^1.10"
