[tool.poetry]
name = "django-exiffield"
version = "2.0.0"
description = "django-exiffield extracts exif information by utilizing exiftool."
authors = [
  "Alexander Frenzel <alex@relatedworks.com>"
]
readme = "README.rst"
license = "BSD-3-Clause"

homepage = "https://github.com/escaped/django-exiffield"
repository = "https://github.com/escaped/django-exiffield"
documentation = "https://github.com/escaped/django-exiffield/blob/master/README.rst"

keywords = ["django", "exif"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
  { include = "exiffield" },
]

[tool.poetry.dependencies]
python = ">=3.6"

choicesenum = ">=0.2.2"
pillow = ">=5.0"
jsonfield2 = "^3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
ipython = "^7.9"
isort = "^4.3"
mypy = "^0.740.0"
pdbpp = "^0.10.2"
pre-commit = "^1.20"
pytest = "^5.3"
pytest-cov = "^2.8"
pytest-django = "^3.7"
pytest-mock = "^1.12"
